# hope-documents

./: .gitignore  .importlinter  .pre-commit-config.yaml  README.md  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  tox.ini
.github/: file-filters.yml
.github/workflows/: docs.yml  issues.yml  lint.yml  release.yml  test.yml
docs/: mkdocs.yml
docs/src/: .pages  about.md  api.md  architecture.md  cli.md  contributing.md  index.md
src/hope_documents/: exceptions.py  utils.py
src/hope_documents/archive/: admin.py  apps.py  models.py  utils.py
src/hope_documents/archive/migrations/: 0001_initial.py
src/hope_documents/archive/templates/hope_documents/: test_image.html
src/hope_documents/ocr/: __cli__.py  diff.py  engine.py  inspect.html  loader.py  loaders.py  reader.py  report.html
src/hope_documents/ocr/diff/: __init__.py  common.py  impl1.py
src/hope_documents/utils/: image.py  language.py  timeit.py
tests/: .coveragerc  conftest.py  test_cli.py
tests/_demoapp/demo/: __init__.py  apps.py  backends.py  settings.py  utils.py
tests/_demoapp/demo/factories/: documents.py  user.py
tests/_extras/testutils/: __init__.py
tests/_extras/testutils/factories/: __init__.py  user.py
tests/archive/: test_admin.py  test_models.py
tests/cli/: test_cli_extract.py  test_cli_inspect.py  test_cli_report.py
tests/ocr/: expectations.csv  template.html  test_engine.py  test_loader.py  test_reader.py
tests/ocr/diff/: test_common.py  test_debug.py  test_impl1.py
tests/utils/: test_image.py  test_language.py  test_logging.py  test_timeit.py
